perses-results/3/final_replace/iter_8/PersesTempRoot_Main.java_run2.sh_20250804_231511_00/000000/compile_err.txt
./Main.java:88: error: incompatible types: String cannot be converted to Boolean[]
"bug"
^
./Main.java:562: warning: [removal] Long(long) in Long has been deprecated and marked for removal
new
^
./Main.java:1803: warning: [removal] Long(long) in Long has been deprecated and marked for removal
new
^
./Main.java:2476: warning: [removal] Long(long) in Long has been deprecated and marked for removal
new
^
1 error
3 warnings
